--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/pages/index.js",
   "scripts": {
     "dev": "webpack serve --mode development --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +20,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.7.3",
     "cssnano": "^7.0.6",
+    "gh-pages": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.1",
     "postcss-loader": "^8.1.1",
@@ -29,5 +32,6 @@
     "last 2 versions",
     "> 1%",
     "not dead"
-  ]
+  ],
+  "homepage": "https://lsegura22.github.io/se_project_aroundtheus"
 }
